2009-12-07  root  <Gunnar Wrobel <wrobel@pardus.de>>

	* www/admin/user/user.php.in: kolab/issue1340 (RFC: restrict users
	to sending mail only to internal recipients)

2009-12-03  Gunnar Wrobel  <p@rdus.de>

	* php/admin/include/ldap.class.php.in: 
	* www/admin/*: 

	 kolab/issue3499 (Kolab web admin does not use LDAP escaping)

2009-11-16 Richard Bos <richard@radoeka.nl>
	* php/admin/templates/settings.tpl: Use a table to separate the
	  checkbox and text, for nicer formatting.  kolab/issue3428

2009-05-14  Thomas Arendsen Hein  <thomas@intevation.de>

	* php/admin/locale/fr/LC_MESSAGES/messages.po: Updated french
	translation (kolab/issue2505)

	* www/admin/addressbook/addr.php.in: Fix kolab/issue3570 (Viewing
	external addresses fails to display phone numbers and some other
	values) by removing strtolower for attribute names.

2009-03-07  Mathieu Parent  <math.parent@gmail.com>

	* php/admin/include/ldap.class.php.in: Fix undefined variable $conn

2009-02-16 Richard Bos <richard@radoeka.nl>

	* php/admin/templates/settings.tpl: improved layout,
	kolab/issue3404

2009-02-14 Richard Bos <richard@radoeka.nl>

	* php/admin/locale/nl/LC_MESSAGES/messages.po: improved translation

2008-12-12  Thomas Arendsen Hein  <thomas@intevation.de>

	* www/admin/kolab/versions.php.in: Folded @amavisd_pkg@,
	@emailserver_pkg@, @imap_pkg@, @webserver_pkg@, @kolab_pkg@,
	@kolab_webadmin_pkg@, @kolab_filter_pkg@, @kolab_freebusy_pkg@,
	@perl_kolabconf_pkg@, @perl_kolab_pkg@ and @php_kolab_pkg@ into
	@kolab_pkgs@, and rename @pear_horde_pkg@ to @pear_horde_pkgs@
	for consistency. List is not yet updated for new package names.
	Set $kolabversion default to 'unknown' instead of the obsolete
	value '2.1-official'.

2008-11-11 Mathieu Parent <math.parent@gmail.com>

	* www/admin/settings/index.php.in: opportunity to delete freebusy value
	  (issue3230)

2008-09-08 Richard Bos <richard@radoeka.nl>

	* php/admin/include/auth.class.php.in: changed the title of login page