@@ -521,7 +521,9 @@ if( $auth->group() == 'admin' || $auth->group() == 'maintainer' || $auth->group(
   $entries['givenname']['comment'] = '';
   $entries['sn']['comment'] = '';
   $entries['alias']['attrs'] = 'readonly';
+  $entries['kolabdelegate']['attrs'] = 'readonly';
   $entries['kolabhomeserver']['attrs'] = 'readonly';
+  $entries['kolabAllowSMTPRecipient']['attrs'] = 'readonly';
   $entries['accttype']['attrs'] = 'readonly';
   $entries['uid']['attrs'] = 'readonly';
 }
@@ -717,6 +719,8 @@ switch( $action ) {
 			   unset($ldap_object['mail']);
 			   unset($ldap_object['uid']);
 			   unset($ldap_object['kolabHomeServer']);
+			   unset($ldap_object['kolabAllowSMTPRecipient']);
+			   unset($ldap_object['kolabDelegate']);
 			 }
 			 if (!ldap_modify($ldap->connection, $dn, $ldap_object)) {			   
 			   array_push($errors, sprintf(_("LDAP Error: Could not modify object %s: %s"), $dn,
